# n-body

./: Cargo.toml  README.md
examples/: main.rs
src/: lib.rs  main.rs
src/physics/: body.rs  boundary.rs  grid.rs  inv_sqrt.rs  mod.rs  quadtree.rs  world.rs
src/renderer/: gui.rs  mod.rs  view.rs
