[package]
name = "n-body"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.11.0"
winit = "0.28.2"

winit_input_helper = "0.14.0"

log = "0.4.17"

rand = "0.8.5"

nalgebra = "0.32.1"
cpu-time = "1.0.0"

[profile.release-with-debug]
inherits = "release"
debug = true