[package]
name = "n-body"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.11.0"
winit = "0.27"

winit_input_helper = "0.13"

puffin = "0.14.3"
puffin_egui = "0.19.2"

egui = "0.20"
egui-wgpu = "0.20"
egui-winit = { version = "0.20", default-features = false, features = ["links"] }

profiling = "1.0.7"

log = "0.4.17"

rand = "0.8.5"

nalgebra = "0.32.2"
cpu-time = "1.0.0"

[profile.release-with-debug]
inherits = "release"
debug = true